# SudokuSolverCLI

./: .gitignore  LICENSE  README.md  main.sh  pyproject.toml  python  test.sh
src/: main.py
src/algorithms/: __init__.py  basic.py
src/algorithms/uniqueness_solver/: complete_solver.py
src/image_parsing/: image_parser.py
src/models/: digit_recognition.py  download_state.py
src/sudoku/: board.py  history.py  network.py
src/ui/: menus.py  navigation.py  settings.py  ui.py
tests/sudoku/: test_board.py
